@@ -17,6 +17,9 @@ VERSION.m4 VERSION stamp.year stamp.month stamp.day: ChangeLog
 
 CONFIGURE_DEPENDENCIES = VERSION.m4
 
+## Hook `dist-bzip2' to `dist'.
+AUTOMAKE_OPTIONS = dist-bzip2 check-news
+
 ## used in make dist[check]
 VERSION = @PACKAGE_VERSION@
 PACKAGE = @PACKAGE_TARNAME@
@@ -25,6 +28,16 @@ SUBDIRS = script man doc contrib init
 
 docdir = $(datadir)/doc/$(PACKAGE)
 doc_DATA = AUTHORS COPYING ChangeLog ChangeLog.2003 README THANKS TODO
+
+## local targets
+MY_RDIR = opal:www/mdcc.cx/pub/uruk/
+
+sign:
+	for i in $(DIST_ARCHIVES); do echo "gpg --armor --detach-sign $$i"; gpg --armor --detach-sign $$i; done
+
+publish:
+	for i in $(DIST_ARCHIVES); do echo "scp $$i $$i.asc $(MY_RDIR)"; scp $$i $$i.asc $(MY_RDIR); done
+	@echo now run: ssh opal update-tar-symlinks uruk
 
 EXTRA_DIST = bootstrap ChangeLog.2003 setversion stamp.month stamp.year \
   stamp.day VERSION.m4 VERSION
